Opened 14 years ago
Closed 14 years ago
#1512 closed defect (fixed)
bogus ffmpeg -codecs output
| Reported by: | Elon Musk | Owned by: | |
|---|---|---|---|
| Priority: | minor | Component: | ffmpeg |
| Version: | git-master | Keywords: | |
| Cc: | Blocked By: | ||
| Blocking: | Reproduced by developer: | no | |
| Analyzed by developer: | no |
Description
Summary of the bug:
ffmpeg -codecs shows F ot S ot B if codecs supports frame, slice or both multithreading.
Problems is that decoder may not have same capabilities s as encoder so displayed information may be correct for only one of them.
How to reproduce:
> ffmpeg -codecs ffmpeg version git-2012-07-05-f39e34a Copyright (c) 2000-2012 the FFmpeg developers built on Jul 5 2012 00:18:27 with clang 3.0 (tags/RELEASE_30/final 145349) configuration: --cc=clang --as=clang --extra-cflags=-I/usr/local/include --extra-cflags=-analyze --extra-ldflags=-L/usr/local/lib --disable-debug --disable-static --disable-postproc --disable-indev=v4l2 --disable-indev=alsa --disable-indev=bktr --disable-indev=dshow --disable-indev=dv1394 --disable-indev=fbdev --disable-indev=jack --disable-indev=libcdio --disable-indev=libdc1394 --disable-indev=openal --disable-indev=pulse --disable-indev=sndio --disable-indev=vfwcap --disable-outdev=sndio --disable-outdev=alsa --disable-outdev=sdl --enable-nonfree --enable-openssl --enable-gpl --enable-shared --enable-libx264 --enable-libmp3lame --enable-libschroedinger --enable-x11grab --enable-libopenjpeg --enable-libaacplus --samples=../fate-suite libavutil 51. 64.100 / 51. 64.100 libavcodec 54. 32.100 / 54. 32.100 libavformat 54. 14.100 / 54. 14.100 libavdevice 54. 0.100 / 54. 0.100 libavfilter 3. 0.101 / 3. 0.101 libswscale 2. 1.100 / 2. 1.100 libswresample 0. 15.100 / 0. 15.100 Codecs: D...... = Decoding supported .E..... = Encoding supported ..V.... = Video codec ..A.... = Audio codec ..S.... = Subtitle codec ...S... = Supports draw_horiz_band ....D.. = Supports direct rendering method 1 .....T. = Supports weird frame truncation ......F = Supports frame-based multi-threading ......S = Supports slice-based multi-threading ......B = Supports both frame-based and slice-based multi-threading -------- D V D 4xm 4X Movie D V D 8bps QuickTime 8BPS video D A D 8svx_exp 8SVX exponential D A D 8svx_fib 8SVX fibonacci EV a64multi Multicolor charset for Commodore 64 EV a64multi5 Multicolor charset for Commodore 64, extended with 5th color (colram) DEA D aac Advanced Audio Coding D A D aac_latm AAC LATM (Advanced Audio Codec LATM syntax) D V D aasc Autodesk RLE DEA D ac3 ATSC A/52A (AC-3) EA ac3_fixed ATSC A/52A (AC-3) D A D adpcm_4xm ADPCM 4X Movie DEA D adpcm_adx SEGA CRI ADX ADPCM D A D adpcm_ct ADPCM Creative Technology D A D adpcm_ea ADPCM Electronic Arts D A D adpcm_ea_maxis_xa ADPCM Electronic Arts Maxis CDROM XA D A D adpcm_ea_r1 ADPCM Electronic Arts R1 D A D adpcm_ea_r2 ADPCM Electronic Arts R2 D A D adpcm_ea_r3 ADPCM Electronic Arts R3 D A D adpcm_ea_xas ADPCM Electronic Arts XAS D A D adpcm_ima_amv ADPCM IMA AMV D A D adpcm_ima_apc ADPCM IMA CRYO APC D A D adpcm_ima_dk3 ADPCM IMA Duck DK3 D A D adpcm_ima_dk4 ADPCM IMA Duck DK4 D A D adpcm_ima_ea_eacs ADPCM IMA Electronic Arts EACS D A D adpcm_ima_ea_sead ADPCM IMA Electronic Arts SEAD D A D adpcm_ima_iss ADPCM IMA Funcom ISS DEA D adpcm_ima_qt ADPCM IMA QuickTime D A D adpcm_ima_smjpeg ADPCM IMA Loki SDL MJPEG DEA D adpcm_ima_wav ADPCM IMA WAV D A D adpcm_ima_ws ADPCM IMA Westwood DEA D adpcm_ms ADPCM Microsoft D A D adpcm_sbpro_2 ADPCM Sound Blaster Pro 2-bit D A D adpcm_sbpro_3 ADPCM Sound Blaster Pro 2.6-bit D A D adpcm_sbpro_4 ADPCM Sound Blaster Pro 4-bit DEA D adpcm_swf ADPCM Shockwave Flash D A D adpcm_thp ADPCM Nintendo Gamecube THP D A D adpcm_xa ADPCM CDROM XA DEA D adpcm_yamaha ADPCM Yamaha DEA D alac ALAC (Apple Lossless Audio Codec) D A D als MPEG-4 Audio Lossless Coding (ALS) D A D amrnb Adaptive Multi-Rate NarrowBand D A D amrwb Adaptive Multi-Rate WideBand DEV amv AMV Video D V D anm Deluxe Paint Animation D V D ansi ASCII/ANSI art D A D ape Monkey's Audio DES ass Advanced SubStation Alpha subtitle DEV D asv1 ASUS V1 DEV D asv2 ASUS V2 D A D atrac1 Atrac 1 (Adaptive TRansform Acoustic Coding) D A D atrac3 Atrac 3 (Adaptive TRansform Acoustic Coding 3) D V D aura Auravision AURA D V D aura2 Auravision Aura 2 DEV D avrp Avid 1:1 10-bit RGB Packer D V D avs AVS (Audio Video Standard) video DEV D avui Avid Meridien Uncompressed DEV D ayuv Uncompressed packed MS 4:4:4:4 D V D bethsoftvid Bethesda VID video D V D bfi Brute Force & Ignorance D A D binkaudio_dct Bink Audio (DCT) D A D binkaudio_rdft Bink Audio (RDFT) D V binkvideo Bink video D V D bintext Binary text DEV D bmp BMP image D A D bmv_audio Discworld II BMV audio D V bmv_video Discworld II BMV video D V D c93 Interplay C93 D V D camstudio CamStudio D V D camtasia TechSmith Screen Capture Codec D V D cavs Chinese AVS video (AVS1-P2, JiZhun profile) D V D cdgraphics CD Graphics video D V D cdxl Commodore CDXL video D V D cinepak Cinepak DEV D cljr Cirrus Logic AccuPak D A D cook COOK D V D cyuv Creative YUV (CYUV) DEA D dca DCA (DTS Coherent Acoustics) D V D dfa Chronomaster DFA D V dirac BBC Dirac VC-2 DEV D B dnxhd VC3/DNxHD DEV dpx DPX image D A D dsicinaudio Delphine Software International CIN audio D V D dsicinvideo Delphine Software International CIN video DES dvbsub DVB subtitles DES dvdsub DVD subtitles DEV D S dvvideo DV (Digital Video) D V D dxa Feeble Files/ScummVM DXA D V D dxtory Dxtory DEA D eac3 ATSC A/52 E-AC-3 D V D eacmv Electronic Arts CMV video D V D eamad Electronic Arts Madcow Video D V D eatgq Electronic Arts TGQ video D V eatgv Electronic Arts TGV video D V D eatqi Electronic Arts TQI Video D V D escape124 Escape 124 D V D escape130 Escape 130 D V exr OpenEXR image DEV D S ffv1 FFmpeg video codec #1 DEVSD F ffvhuff Huffyuv FFmpeg variant DEA D flac FLAC (Free Lossless Audio Codec) DEV D flashsv Flash Screen Video DEV D flashsv2 Flash Screen Video Version 2 D V D flic Autodesk Animator Flic video DEVSD flv Flash Video (FLV) / Sorenson Spark / Sorenson H.263 D V D F fraps Fraps D V D frwu Forward Uncompressed DEA D g722 G.722 ADPCM DEA g723_1 G.723.1 DEA D g726 G.726 ADPCM D A D g729 G.729 DEV D gif GIF (Graphics Interchange Format) D A D gsm GSM D A D gsm_ms GSM Microsoft variant DEV D h261 H.261 DEVSDT h263 H.263 / H.263-1996 D VSD h263i Intel H.263 EV S h263p H.263+ / H.263-1998 / H.263 version 2 D V D B h264 H.264 / AVC / MPEG-4 AVC / MPEG-4 part 10 DEVSD F huffyuv Huffyuv / HuffYUV D A D iac IAC (Indeo Audio Coder) D V D idcinvideo id Quake II CIN video D V D idf iCEDraw text D V D iff_byterun1 IFF ByteRun1 D V D iff_ilbm IFF ILBM D A D imc IMC (Intel Music Coder) D V D indeo2 Intel Indeo 2 D V indeo3 Intel Indeo 3 D V indeo4 Intel Indeo Video Interactive 4 D V indeo5 Intel Indeo Video Interactive 5 D A D interplay_dpcm DPCM Interplay D V D interplayvideo Interplay MVE video DEV j2k JPEG 2000 D S jacosub JACOsub subtitle DEV D jpegls JPEG-LS D V D jv Bitmap Brothers JV video D V kgv1 Kega Game Video D V D kmvc Karl Morton's video codec D V D F lagarith Lagarith lossless EA libaacplus libaacplus AAC+ (Advanced Audio Codec with SBR+PS) EA libmp3lame libmp3lame MP3 (MPEG audio layer 3) DEV D F libopenjpeg OpenJPEG JPEG 2000 DEV libschroedinger libschroedinger Dirac 2.2 EV libx264 libx264 H.264 / AVC / MPEG-4 AVC / MPEG-4 part 10 EV libx264rgb libx264 H.264 / AVC / MPEG-4 AVC / MPEG-4 part 10 RGB EV ljpeg Lossless JPEG D V D loco LOCO D A D mace3 MACE (Macintosh Audio Compression/Expansion) 3:1 D A D mace6 MACE (Macintosh Audio Compression/Expansion) 6:1 D V D F mdec Sony PlayStation MDEC (Motion DECoder) D S microdvd MicroDVD subtitle D V D F mimic Mimic DEV D B mjpeg MJPEG (Motion JPEG) D V D mjpegb Apple MJPEG-B D A D mlp MLP (Meridian Lossless Packing) D V D mmvideo American Laser Games MM Video D V D motionpixels Motion Pixels video D A D mp1 MP1 (MPEG audio layer 1) D A D mp1float MP1 (MPEG audio layer 1) DEA D mp2 MP2 (MPEG audio layer 2) D A D mp2float MP2 (MPEG audio layer 2) D A D mp3 MP3 (MPEG audio layer 3) D A D mp3adu ADU (Application Data Unit) MP3 (MPEG audio layer 3) D A D mp3adufloat ADU (Application Data Unit) MP3 (MPEG audio layer 3) D A D mp3float MP3 (MPEG audio layer 3) [...]
Note:
See TracTickets
for help on using tickets.


