Extend -codecs output.

Allow to show different supported multi-threading methods for an
encoder/decoder pair.

Fixes ticket #1512